--- a/content/src/styles/main.css
+++ b/content/src/styles/main.css
@@ -1,6 +1,25 @@
+/* darkmode colors */
 :root {
-    --background: black;
-    --foreground: white;
-    --border: grey;
-    --link-color: #49a4ff;
+  --background: black;
+  --foreground: white;
+  --border: grey;
+  --link-color: #49a4ff;
+}
+
+/* lightmode colors */
+@media (perfers-color-scheme: light) {
+  :root {
+    --background: #ffffff;
+    --foreground: rgb(23, 23, 23);
+    --border: rgb(214, 214, 214);
+  }
+}
+
+body {
+  background-color: var(--background);
+  color: var(--foreground);
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  margin: 0;
+  padding: 0;
 }
