feat: include inter font files
Signed-off-by: Matt Gleich <git@mattglei.ch>

--- a/content/src/styles/main.css
+++ b/content/src/styles/main.css
@@ -29,3 +29,15 @@ body {
   text-decoration-color: var(--background);
   color: var(--background);
 }
+
+/* fonts */
+@font-face {
+  font-family: 'Inter';
+  src: url(/fonts/inter/regular.otf);
+}
+
+@font-face {
+  font-family: 'Inter';
+  src: url(/fonts/inter/bold.otf);
+  font-weight: bold;
+}
